--- a/quiz-app-db.json
+++ b/quiz-app-db.json
@@ -1,9 +1,8 @@
 {
   "questions": [
     {
-      "id": 1,
       "quiz": "What's the output?",
-      "code": "function sayHi() {console.log(name);console.log(age);var name = 'Lydia';let age = 21;}",
+      "code": "function sayHi() {\n  console.log(name);\n  console.log(age);\n  var name = 'Lydia';\n  let age = 21;\n}\n\nsayHi();",
       "ans": [
         "Lydia and undefined",
         "Lydia and ReferenceError",
@@ -14,29 +13,16 @@
       "exp": "Within the function, we first declare the name variable with the var keyword. This means that the variable gets hoisted (memory space is set up during the creation phase) with the default value of undefined, until we actually get to the line where we define the variable. We haven't defined the variable yet on the line where we try to log the name variable, so it still holds the value of undefined.Variables with the let keyword (and const) are hoisted, but unlike var, don't get initialized. They are not accessible before the line we declare (initialize) them. This is called the \"temporal dead zone\". When we try to access the variables before they are declared, JavaScript throws a ReferenceError."
     },
     {
-      "id": 2,
-      "question": "What's the output?",
-      "code": "function sayHi() {console.log(name);console.log(age);var name = 'Lydia';let age = 21;}",
-      "choices": [
-        {
-          "id": 1,
-          "text": "Lydia and undefined"
-        },
-        {
-          "id": 2,
-          "text": "Lydia and ReferenceError"
-        },
-        {
-          "id": 3,
-          "text": "ReferenceError and 21"
-        },
-        {
-          "id": 4,
-          "text": "undefined and ReferenceError"
-        }
+      "quiz": "What's the output?",
+      "code": "\nfor (var i = 0; i < 3; i++) {\n  setTimeout(() => console.log(i), 1);\n}\n\nfor (let i = 0; i < 3; i++) {\n  setTimeout(() => console.log(i), 1);\n}",
+      "ans": [
+        "Lydia and undefined",
+        "Lydia and ReferenceError",
+        "ReferenceError and 21",
+        "undefined and ReferenceError"
       ],
-      "correctAns": 4,
-      "explanation": "Within the function, we first declare the name variable with the var keyword. This means that the variable gets hoisted (memory space is set up during the creation phase) with the default value of undefined, until we actually get to the line where we define the variable. We haven't defined the variable yet on the line where we try to log the name variable, so it still holds the value of undefined.Variables with the let keyword (and const) are hoisted, but unlike var, don't get initialized. They are not accessible before the line we declare (initialize) them. This is called the \"temporal dead zone\". When we try to access the variables before they are declared, JavaScript throws a ReferenceError."
+      "correctIdx": 3,
+      "exp": "Within the function, we first declare the name variable with the var keyword. This means that the variable gets hoisted (memory space is set up during the creation phase) with the default value of undefined, until we actually get to the line where we define the variable. We haven't defined the variable yet on the line where we try to log the name variable, so it still holds the value of undefined.Variables with the let keyword (and const) are hoisted, but unlike var, don't get initialized. They are not accessible before the line we declare (initialize) them. This is called the \"temporal dead zone\". When we try to access the variables before they are declared, JavaScript throws a ReferenceError."
     }
   ]
 }
